--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
       border-radius: 999px;
     }
 
-    .dot-none { background: #22c55e; }    /* green */
-    .dot-short { background: #a3e635; }   /* lime */
-    .dot-medium { background: #eab308; }  /* yellow */
-    .dot-long { background: #f97316; }    /* orange */
+    .dot-none { background: #22c55e; }
+    .dot-short { background: #a3e635; }
+    .dot-medium { background: #eab308; }
+    .dot-long { background: #f97316; }
 
     /* Progress bar */
     .progress-wrapper {
@@ -161,6 +161,29 @@
       margin-top: 6px;
       font-size: 0.78rem;
       color: #6b7280;
+    }
+
+    /* Reset button */
+    .reset-btn {
+      width: 100%;
+      padding: 8px;
+      border-radius: 10px;
+      border: 1px solid #1f2937;
+      background: #0f172a;
+      color: #e5e7eb;
+      font-size: 0.8rem;
+      cursor: pointer;
+      margin-bottom: 10px;
+      transition: background 0.12s ease, border 0.12s ease;
+    }
+
+    .reset-btn:hover {
+      background: #1e293b;
+      border-color: #334155;
+    }
+
+    .reset-btn:active {
+      transform: scale(0.98);
     }
 
     /* Section buttons */
@@ -263,12 +286,15 @@
       </div>
     </section>
 
+    <button id="reset-btn" class="reset-btn">Reset this lane</button>
+
     <section class="sections" id="sections">
-      <!-- Buttons are injected per lane by JS -->
+      <!-- Buttons injected by JS -->
     </section>
 
     <p class="hint">
-      Pick your lane, then tap a section. The bar is based on the average of all your taps for that lane on this device.
+      Pick your lane, then tap a section.  
+      The bar shows the average of all your taps for that lane.
     </p>
   </div>
 
@@ -286,299 +312,172 @@
       ]
     };
 
-    // Per-lane section configs
+    // Per-lane sections
     const SECTION_CONFIG = {
-      // Tills use aisle distance
       tills: [
-        {
-          id: "none",
-          label: "No queue",
-          description: "Walk straight up to a till",
-          fill: 5,
-          intensity: "none"
-        },
-        {
-          id: "front",
-          label: "Front of aisle",
-          description: "Just spilling into the aisle",
-          fill: 25,
-          intensity: "short"
-        },
-        {
-          id: "middle",
-          label: "Middle of aisle",
-          description: "Halfway down the aisle",
-          fill: 50,
-          intensity: "medium"
-        },
-        {
-          id: "back",
-          label: "Back of aisle",
-          description: "Near the end of the aisle",
-          fill: 75,
-          intensity: "long"
-        },
-        {
-          id: "beyond",
-          label: "Beyond aisle / outside",
-          description: "Wrapped into next aisle or outside",
-          fill: 100,
-          intensity: "long"
-        }
+        { id: "none", label: "No queue", description: "Walk straight up", fill: 5, intensity: "none" },
+        { id: "front", label: "Front of aisle", description: "Just into aisle", fill: 25, intensity: "short" },
+        { id: "middle", label: "Middle of aisle", description: "Halfway down", fill: 50, intensity: "medium" },
+        { id: "back", label: "Back of aisle", description: "Near end", fill: 75, intensity: "long" },
+        { id: "beyond", label: "Beyond aisle", description: "Wrapped/Outside", fill: 100, intensity: "long" }
       ],
 
-      // Self-checkout lanes: worst -> best
       sco1: [
-        {
-          id: "sco_full",
-          label: "Packed / long wait",
-          description: "All machines busy, long queue",
-          fill: 100,
-          intensity: "long"
-        },
-        {
-          id: "sco_tight",
-          label: "No spaces, 1–3 waiting",
-          description: "Small queue at the machines",
-          fill: 70,
-          intensity: "medium"
-        },
-        {
-          id: "sco_some",
-          label: "1–2 spaces free",
-          description: "You’ll probably get one soon",
-          fill: 40,
-          intensity: "short"
-        },
-        {
-          id: "sco_plenty",
-          label: "3+ spaces free",
-          description: "Plenty of free machines",
-          fill: 15,
-          intensity: "none"
-        }
+        { id: "sco_full", label: "Packed / long wait", description: "All machines busy", fill: 100, intensity: "long" },
+        { id: "sco_tight", label: "No spaces, 1–3 waiting", description: "Small queue", fill: 70, intensity: "medium" },
+        { id: "sco_some", label: "1–2 spaces free", description: "Probably get one", fill: 40, intensity: "short" },
+        { id: "sco_plenty", label: "3+ spaces free", description: "Plenty of machines", fill: 15, intensity: "none" }
       ],
+
       sco2: [
-        {
-          id: "sco_full",
-          label: "Packed / long wait",
-          description: "All machines busy, long queue",
-          fill: 100,
-          intensity: "long"
-        },
-        {
-          id: "sco_tight",
-          label: "No spaces, 1–3 waiting",
-          description: "Small queue at the machines",
-          fill: 70,
-          intensity: "medium"
-        },
-        {
-          id: "sco_some",
-          label: "1–2 spaces free",
-          description: "You’ll probably get one soon",
-          fill: 40,
-          intensity: "short"
-        },
-        {
-          id: "sco_plenty",
-          label: "3+ spaces free",
-          description: "Plenty of free machines",
-          fill: 15,
-          intensity: "none"
-        }
+        { id: "sco_full", label: "Packed / long wait", description: "All machines busy", fill: 100, intensity: "long" },
+        { id: "sco_tight", label: "No spaces, 1–3 waiting", description: "Small queue", fill: 70, intensity: "medium" },
+        { id: "sco_some", label: "1–2 spaces free", description: "Probably get one", fill: 40, intensity: "short" },
+        { id: "sco_plenty", label: "3+ spaces free", description: "Plenty of machines", fill: 15, intensity: "none" }
       ]
     };
 
     const STORAGE_PREFIX = "queue_section_" + STORE_CONFIG.id + "_";
     let currentLaneId = "tills";
 
-    function laneStorageKey(laneId) {
-      return STORAGE_PREFIX + laneId;
+    const laneStorageKey = laneId => STORAGE_PREFIX + laneId;
+
+    function loadStatus(laneId) {
+      try {
+        const raw = localStorage.getItem(laneStorageKey(laneId));
+        if (!raw) return null;
+        const obj = JSON.parse(raw);
+        if (!obj.votes) obj.votes = {};
+        return obj;
+      } catch { return null; }
+    }
+
+    function registerVote(laneId, sectionId) {
+      const key = laneStorageKey(laneId);
+      let record = loadStatus(laneId) || { votes: {} };
+
+      record.votes[sectionId] = (record.votes[sectionId] || 0) + 1;
+      record.updatedAt = new Date().toISOString();
+      localStorage.setItem(key, JSON.stringify(record));
+      return record;
+    }
+
+    function resetLane(laneId) {
+      localStorage.removeItem(laneStorageKey(laneId));
+      applyStatusToUI(laneId);
+    }
+
+    function formatTimeAgo(iso) {
+      if (!iso) return "Last updated: —";
+      const t = new Date(iso);
+      const diff = (new Date() - t) / 60000;
+      if (diff < 1) return "Last updated: just now";
+      if (diff < 60) return `Last updated: ${Math.floor(diff)} minutes ago`;
+      const h = diff / 60;
+      if (h < 24) return `Last updated: ${Math.floor(h)} hours ago`;
+      const d = h / 24;
+      return `Last updated: ${Math.floor(d)} days ago`;
     }
 
     function getSectionsForLane(laneId) {
       return SECTION_CONFIG[laneId] || SECTION_CONFIG["tills"];
     }
 
-    function loadStatus(laneId) {
-      try {
-        const raw = localStorage.getItem(laneStorageKey(laneId));
-        if (!raw) return null;
-        const record = JSON.parse(raw);
-        if (!record.votes) record.votes = {};
-        return record;
-      } catch {
-        return null;
-      }
-    }
-
-    // Register a vote and store aggregated counts
-    function registerVote(laneId, sectionId) {
-      const key = laneStorageKey(laneId);
-      let record = loadStatus(laneId) || { votes: {} };
-
-      if (typeof record.votes[sectionId] !== "number") {
-        record.votes[sectionId] = 0;
-      }
-      record.votes[sectionId] += 1;
-      record.updatedAt = new Date().toISOString();
-
-      localStorage.setItem(key, JSON.stringify(record));
-      return record;
-    }
-
-    function formatTimeAgo(isoString) {
-      if (!isoString) return "Last updated: —";
-      const then = new Date(isoString);
-      const now = new Date();
-      const diffMin = Math.floor((now - then) / 60000);
-
-      if (diffMin < 1) return "Last updated: just now";
-      if (diffMin === 1) return "Last updated: 1 minute ago";
-      if (diffMin < 60) return `Last updated: ${diffMin} minutes ago`;
-
-      const diffHours = Math.floor(diffMin / 60);
-      if (diffHours === 1) return "Last updated: 1 hour ago";
-      if (diffHours < 24) return `Last updated: ${diffHours} hours ago`;
-
-      const diffDays = Math.floor(diffHours / 24);
-      return diffDays === 1
-        ? "Last updated: 1 day ago"
-        : `Last updated: ${diffDays} days ago`;
-    }
-
-    function getLaneConfig(laneId) {
-      return STORE_CONFIG.lanes.find(l => l.id === laneId);
-    }
-
     function renderSectionsForLane(laneId) {
-      const container = document.getElementById("sections");
-      container.innerHTML = "";
-
-      const sections = getSectionsForLane(laneId);
-      sections.forEach(section => {
+      const box = document.getElementById("sections");
+      box.innerHTML = "";
+      getSectionsForLane(laneId).forEach(section => {
         const btn = document.createElement("button");
         btn.className = "section-btn";
         btn.dataset.section = section.id;
 
-        const labelSpan = document.createElement("span");
-        labelSpan.className = "label";
-        labelSpan.textContent = section.label;
-
-        const subSpan = document.createElement("span");
-        subSpan.className = "sub";
-        subSpan.textContent = section.description;
-
-        btn.appendChild(labelSpan);
-        btn.appendChild(subSpan);
+        btn.innerHTML = `
+          <span class="label">${section.label}</span>
+          <span class="sub">${section.description}</span>
+        `;
 
         btn.addEventListener("click", () => {
           registerVote(currentLaneId, section.id);
           applyStatusToUI(currentLaneId);
         });
 
-        container.appendChild(btn);
+        box.appendChild(btn);
       });
     }
 
     function applyStatusToUI(laneId) {
       const record = loadStatus(laneId);
-      const statusTextEl = document.getElementById("status-text");
-      const dotEl = document.getElementById("status-dot");
-      const lastUpdatedEl = document.getElementById("last-updated");
-      const laneLabelEl = document.getElementById("lane-label");
-      const progressFillEl = document.getElementById("progress-fill");
+      const dot = document.getElementById("status-dot");
+      const text = document.getElementById("status-text");
+      const fillBar = document.getElementById("progress-fill");
+      const updated = document.getElementById("last-updated");
+      const label = document.getElementById("lane-label");
 
-      const lane = getLaneConfig(laneId);
-      laneLabelEl.textContent = `Current report · ${lane.label}`;
+      label.textContent = `Current report · ${STORE_CONFIG.lanes.find(l => l.id === laneId).label}`;
 
-      // reset visuals
-      dotEl.className = "dot";
-      progressFillEl.className = "progress-fill";
-      progressFillEl.style.width = "0%";
-      document.querySelectorAll(".section-btn").forEach(btn =>
-        btn.classList.remove("selected")
-      );
+      dot.className = "dot";
+      fillBar.className = "progress-fill";
+      fillBar.style.width = "0%";
+      document.querySelectorAll(".section-btn").forEach(b => b.classList.remove("selected"));
 
       if (!record || !record.votes) {
-        statusTextEl.textContent = "No reports yet";
-        lastUpdatedEl.textContent = "Last updated: —";
+        text.textContent = "No reports yet";
+        updated.textContent = "Last updated: —";
         return;
       }
 
       const sections = getSectionsForLane(laneId);
 
-      let totalVotes = 0;
-      let weightedFill = 0;
-      let topSection = null;
-      let topCount = 0;
+      let total = 0, weighted = 0, top = null, topCount = 0;
 
-      sections.forEach(section => {
-        const count = record.votes[section.id] || 0;
-        if (count > 0) {
-          totalVotes += count;
-          weightedFill += count * section.fill;
-          if (count > topCount) {
-            topCount = count;
-            topSection = section;
-          }
+      for (const s of sections) {
+        const n = record.votes[s.id] || 0;
+        if (n > 0) {
+          total += n;
+          weighted += n * s.fill;
+          if (n > topCount) { top = s; topCount = n; }
         }
-      });
+      }
 
-      if (totalVotes === 0) {
-        statusTextEl.textContent = "No reports yet";
-        lastUpdatedEl.textContent = "Last updated: —";
+      if (total === 0) {
+        text.textContent = "No reports yet";
+        updated.textContent = "Last updated: —";
         return;
       }
 
-      const avgFill = weightedFill / totalVotes;
+      const avg = weighted / total;
 
-      // Find section whose fill is closest to avgFill for the label
-      let closestSection = sections[0];
-      let minDiff = Math.abs(sections[0].fill - avgFill);
-      sections.forEach(section => {
-        const diff = Math.abs(section.fill - avgFill);
-        if (diff < minDiff) {
-          minDiff = diff;
-          closestSection = section;
-        }
-      });
-
-      statusTextEl.textContent =
-        laneId === "tills"
-          ? `Queue around: ${closestSection.label} (${totalVotes} reports)`
-          : `Self-checkout: ${closestSection.label} (${totalVotes} reports)`;
-
-      const intensity = closestSection.intensity || "none";
-
-      if (intensity) {
-        dotEl.classList.add("dot-" + intensity);
-        progressFillEl.classList.add("fill-" + intensity);
+      // find closest section for label/intensity
+      let closest = sections[0];
+      let bestDiff = Math.abs(closest.fill - avg);
+      for (const s of sections) {
+        const d = Math.abs(s.fill - avg);
+        if (d < bestDiff) { closest = s; bestDiff = d; }
       }
 
-      const clampedFill = Math.max(0, Math.min(100, avgFill));
-      progressFillEl.style.width = clampedFill + "%";
-      lastUpdatedEl.textContent = formatTimeAgo(record.updatedAt);
+      text.textContent =
+        laneId === "tills"
+          ? `Queue around: ${closest.label} (${total} reports)`
+          : `Self-checkout: ${closest.label} (${total} reports)`;
 
-      // Highlight most-voted section
-      if (topSection) {
-        const activeBtn = document.querySelector(
-          `.section-btn[data-section="${topSection.id}"]`
-        );
-        if (activeBtn) activeBtn.classList.add("selected");
+      dot.classList.add("dot-" + closest.intensity);
+      fillBar.classList.add("fill-" + closest.intensity);
+      fillBar.style.width = `${avg}%`;
+
+      updated.textContent = formatTimeAgo(record.updatedAt);
+
+      if (top) {
+        const b = document.querySelector(`.section-btn[data-section="${top.id}"]`);
+        if (b) b.classList.add("selected");
       }
     }
 
-    function switchLane(laneId) {
-      currentLaneId = laneId;
-
-      document.querySelectorAll(".lane-chip").forEach(chip => {
-        chip.classList.toggle("active", chip.dataset.lane === laneId);
-      });
-
-      renderSectionsForLane(laneId);
-      applyStatusToUI(laneId);
+    function switchLane(id) {
+      currentLaneId = id;
+      document.querySelectorAll(".lane-chip").forEach(c =>
+        c.classList.toggle("active", c.dataset.lane === id));
+      renderSectionsForLane(id);
+      applyStatusToUI(id);
     }
 
     function init() {
@@ -586,17 +485,21 @@
       document.getElementById("layout-summary").textContent =
         `Manned tills: ${STORE_CONFIG.mannedTills} · Self-checkouts: ${STORE_CONFIG.selfCheckouts}`;
 
-      document.querySelectorAll(".lane-chip").forEach(chip => {
-        chip.addEventListener("click", () => switchLane(chip.dataset.lane));
+      document.querySelectorAll(".lane-chip").forEach(c =>
+        c.addEventListener("click", () => switchLane(c.dataset.lane))
+      );
+
+      document.getElementById("reset-btn").addEventListener("click", () => {
+        resetLane(currentLaneId);
       });
 
       switchLane(currentLaneId);
 
       setInterval(() => {
-        const record = loadStatus(currentLaneId);
-        if (record && record.updatedAt) {
+        const rec = loadStatus(currentLaneId);
+        if (rec && rec.updatedAt) {
           document.getElementById("last-updated").textContent =
-            formatTimeAgo(record.updatedAt);
+            formatTimeAgo(rec.updatedAt);
         }
       }, 30000);
     }
